components/tt-tooltips.styl
.tt-container
  display none
  position absolute
  box-shadow 1px 1px 2px #ccc

.tt-wrapper
  background-color #95a5a6
  color #ecf0f1

.tt-header
  padding 10px 20px
  background-color rgba(#000, 0.2)

.tt-code
  padding 10px 20px
  margin 0

.tt-show
  display block

.tt-state
  background-color #34495e
  text-transform uppercase

.tt-blocked
  color #f5da55

.tt-fulfilled
  color lighten(#16a085, 10%)

.tt-rejected
  color #e23624

.tt-fulfillment
  background-color darken(#16a085, 10%)

.tt-rejection
  background-color darken(#e23624, 20%)

